--- a/src/main/resources/templates/normal/feed.html
+++ b/src/main/resources/templates/normal/feed.html
@@ -85,6 +85,8 @@
 
               <button
                 style="
+                  box-shadow: 1px 1px 11px #888888;
+
                   width: 54px;
                   border: 1px solid black;
                   background-color: transparent;
