--- a/src/main/resources/templates/normal/answer.html
+++ b/src/main/resources/templates/normal/answer.html
@@ -30,8 +30,6 @@
           data-dismiss="alert"
           aria-label="Close"
         >
-          // implement answer field
-
           <span aria-hidden="true">&times;</span>
         </button>
         <strong th:text="${session.message.content}"></strong>
@@ -50,47 +48,172 @@
             padding-bottom: 70px;
           "
         >
-          <th:block th:each="question : ${questions}">
+          <div
+            style="
+              margin-right: 10px;
+              padding: 16px 16px 4px 16px;
+              box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+              border-radius: 5px;
+              background-color: whitesmoke;
+              float: right;
+              width: -webkit-fill-available;
+              margin-bottom: 25px;
+            "
+          >
+            <div
+              style="font-size: 25px; font-weight: 800"
+              th:text="${question.question}"
+            ></div>
+            <div>
+              <span
+                ><i class="fas fa-user-circle" style="font-size: 25px"></i
+              ></span>
+              <strong>Asker: </strong><a th:text="${question.asker}"></a>
+              <div style="font-size: 18px">
+                <span>
+                  <span class="badge badge-secondary"
+                    >Created : <span th:text="${question.date}"></span
+                  ></span>
+                  <span class="badge badge-secondary"
+                    >Topic : <span th:text="${question.topic}"></span
+                  ></span>
+                  <span
+                    style="text-transform: capitalize"
+                    class="badge badge-secondary"
+                  ></span>
+                </span>
+              </div>
+            </div>
             <div
               style="
-                margin-right: 10px;
-                padding: 16px 16px 4px 16px;
-                box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
-                border-radius: 5px;
-                background-color: whitesmoke;
-                float: right;
-                width: -webkit-fill-available;
-                margin-bottom: 25px;
+                border-top: groove;
+                border-bottom: groove;
+                padding: 10px;
+                margin: 10px 0px 15px 0px;
+                font-weight: 700;
               "
             >
-              <div
-                style="font-size: 25px; font-weight: 800"
-                th:text="${question.question}"
-              ></div>
-              <p>
-                <span
-                  ><i class="fas fa-user-circle" style="font-size: 25px"></i
-                ></span>
-                <strong>Asker: </strong><a th:text="${question.asker}"></a>
-                <div style="font-size: 18px">
-                  <span>
-                    <span class="badge badge-secondary"
-                      >Created : <span th:text="${question.date}"></span
-                    ></span>
-                    <span class="badge badge-secondary"
-                      >Topic : <span th:text="${question.topic}"></span
-                    ></span>
-                    <span
-                      style="text-transform: capitalize"
-                      class="badge badge-secondary"
-                    ></span>
-                  </span>
-                </div>
-              </p>
+              <span
+                style="margin-right: 2px"
+                th:if="${question.getAnswers().isEmpty()}"
+                >Not yet answered</span
+              ><span
+                style="margin-right: 2px"
+                th:if="${!question.getAnswers().isEmpty()}"
+              >
+                <span th:text="${question.getAnswers().size()}"></span
+                ><span style="margin-left: 8px" th:text="Answer"></span
+              ></span>
             </div>
-          </th:block>
+            <!-- th:utext for html parsing -->
+            <div
+              style="border-bottom: groove; margin-bottom: 30px"
+              th:each="answer : ${question.getAnswers()}"
+            >
+              <div style="margin-bottom: 7px">
+                <i class="fas fa-user-circle" style="font-size: 25px"></i
+                ><span
+                  style="margin-left: 11px"
+                  th:text="${answer.author}"
+                ></span>
+              </div>
+              <div style="margin-bottom: 12px">
+                <span class="badge badge-secondary"
+                  >Created : <span th:text="${answer.date}"></span
+                ></span>
+              </div>
+              <div style="padding: 10px; margin-bottom: 15px">
+                <h6 th:remove="tag" th:utext="${answer.content}"></h6>
+              </div>
+              <div>
+                <button
+                  style="
+                    width: 54px;
+                    border: 1px solid black;
+                    background-color: transparent;
+                    padding: 2px;
+                    border-radius: 15px;
+                    height: fit-content;
+                  "
+                  class="btn btn-light likebutton"
+                >
+                  <svg width="24px" height="24px" viewBox="0 0 24 24">
+                    <g
+                      id="upvote"
+                      class="icon_svg-stroke icon_svg-fill arrowicon"
+                      stroke-width="1.5"
+                      stroke="#666"
+                      fill="none"
+                      fill-rule="evenodd"
+                      stroke-linejoin="round"
+                    >
+                      <polygon
+                        points="12 4 3 15 9 15 9 20 15 20 15 15 21 15"
+                      ></polygon>
+                    </g>
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div>
+              <form
+                th:object="${answer}"
+                method="POST"
+                th:action="@{/user/process-answer}"
+              >
+                <div class="form-group">
+                  <label style="font-size: 14px" for="content"
+                    >Write Your Answer</label
+                  >
+                  <textarea
+                    style="width: 100%"
+                    class="form-control"
+                    name="content"
+                    id="content"
+                    rows="5"
+                  ></textarea>
+                </div>
+                <div style="text-align: end" class="container">
+                  <button
+                    style="margin-left: auto"
+                    type="submit"
+                    class="btn btn-dark"
+                  >
+                    Submit
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
+      <script
+        src="http://js.nicedit.com/nicEdit-latest.js"
+        type="text/javascript"
+      ></script>
+      <script src="src/nicSelect/nicSelect.js" type="text/javascript"></script>
+
+      <script type="text/javascript">
+        bkLib.onDomLoaded(function () {
+          new nicEditor({
+            buttonList: [
+              "ul",
+              "ol",
+              "bold",
+              "italic",
+              "underline",
+              "strikeThrough",
+              "subscript",
+              "superscript",
+              "html",
+              "quoteblock",
+              "left",
+              "center",
+              "right",
+            ],
+          }).panelInstance("content");
+        });
+      </script>
     </section>
   </body>
 </html>
