delete Blog feature | JPA Queries | handlers

--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -264,3 +264,7 @@ badge-secondary {
 .answers:focus {
   color: #343a30;
 }
+.dropdown-toggle::after {
+  border-right: none;
+  border-left: none;
+}
