--- a/src/main/resources/templates/normal/qna.html
+++ b/src/main/resources/templates/normal/qna.html
@@ -133,7 +133,7 @@
                       ></span>
                     </a>
                   </div>
-                  <a h:href="@{answer/{id}(id=(${question.questionId}))}">
+                  <a th:href="@{answer/{id}(id=(${question.questionId}))}">
                     <div style="padding: 11px 0px 0px 5px">
                       <button style="padding: 5px; border-radius: 35px">
                         <i class="fas fa-pen-fancy"></i> Answer
