--- a/src/main/resources/templates/normal/userquestions.html
+++ b/src/main/resources/templates/normal/userquestions.html
@@ -94,34 +94,27 @@
                 ></div>
                 <div style="margin-left: auto">
                   <div class="btn-group open">
-                    <a class="btn btn-primary" href="#"
-                      ><i class="fa fa-user fa-fw"></i> User</a
-                    >
                     <a
-                      class="btn btn-primary dropdown-toggle"
+                      style="width: fit-content; background: transparent"
+                      class="btn btn-light dropdown-toggle"
                       data-toggle="dropdown"
                       href="#"
                     >
                       <span
-                        class="fa fa-caret-down"
+                        class="fa fa-ellipsis-h"
                         title="Toggle dropdown menu"
                       ></span>
                     </a>
                     <ul class="dropdown-menu">
-                      <li>
-                        <a href="#"><i class="fa fa-pencil fa-fw"></i> Edit</a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          ><i class="fa fa-trash-o fa-fw"></i> Delete</a
+                      <li style="margin-left: 13px">
+                        <a style="color: black" href="#"
+                          ><i class="fa fa-pen"></i> Edit</a
                         >
                       </li>
-                      <li>
-                        <a href="#"><i class="fa fa-ban fa-fw"></i> Ban</a>
-                      </li>
-                      <li class="divider"></li>
-                      <li>
-                        <a href="#"><i class="fa fa-unlock"></i> Make admin</a>
+                      <li style="margin-left: 13px">
+                        <a style="color: black" href="#"
+                          ><i class="fa fa-trash"></i> Delete</a
+                        >
                       </li>
                     </ul>
                   </div>
