added features | write blog into modal changed handler return into redirect

--- a/src/main/resources/static/css/project.css
+++ b/src/main/resources/static/css/project.css
@@ -189,9 +189,7 @@ badge-secondary {
   background-color: white;
   margin: 0px !important;
   width: 100% !important;
-}
-.text-muted {
-  color: white !important;
+  min-height: 100px !important;
 }
 
 .searchbar {
