--- a/src/main/resources/templates/Base.html
+++ b/src/main/resources/templates/Base.html
@@ -73,7 +73,7 @@
       </nav>
     </header>
     <div th:replace="${content}"></div>
-    <div
+    <!-- <div
       class="box-black"
       style="
         text-align: center;
@@ -83,7 +83,7 @@
       "
     >
       HOME | TERMS | PRIVACY | ABOUT-US | CONTACT
-    </div>
+    </div> -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
