--- a/src/main/resources/templates/normal/feed.html
+++ b/src/main/resources/templates/normal/feed.html
@@ -19,14 +19,25 @@
         <a th:href="@{/user/qna/0}"
           ><button type="button" class="btn btn-dark">QnA</button>
         </a>
-        <a th:href="@{/user/add-blog}">
-          <button type="button" class="btn btn-dark">WRITE BLOG</button>
-        </a>
+        <button
+          type="button"
+          class="btn btn-dark"
+          data-toggle="modal"
+          data-target="#modelId"
+          style="margin-left: 16px"
+        >
+          <!-- <a th:href="@{/user/add-blog}"> -->
+          <!-- <button type="button" class="btn btn-dark"> -->
+          WRITE BLOG
+          <!-- </button> -->
+        </button>
         <a th:href="@{'/logout'}"
           ><button type="button" class="btn btn-dark">LOGOUT</button>
         </a>
       </div>
-
+      <div>
+        <div th:replace="normal/fragments/formfragment :: modal"></div>
+      </div>
       <div class="feed" style="text-align: -webkit-center">
         <div
           style="
@@ -43,6 +54,26 @@
           <!-- <div th:if="${blogs.empty}">
             <span>No Blogs Available</span>
           </div> -->
+          <div
+            class="alert alert-warning alert-dismissible fade show"
+            role="alert"
+            th:if="${session.message}"
+            th:classappend="${session.message.type}"
+            style="padding: 50px; background-color: black; width: fit-content"
+          >
+            <button
+              type="button"
+              class="close"
+              data-dismiss="alert"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <strong th:text="${session.message.content}"></strong>
+            <th:block
+              th:text="${#session.removeAttribute('message')}"
+            ></th:block>
+          </div>
           <th:block th:each="blog : ${blogs}">
             <div
               style="
