--- a/src/main/resources/templates/normal/fragments/questionfragment.html
+++ b/src/main/resources/templates/normal/fragments/questionfragment.html
@@ -22,7 +22,7 @@
             <div class="modal-body">
               <div class="container-fluid">
                 <form
-                  th:object="${question}"
+                  th:object="${question1}"
                   method="POST"
                   th:action="@{/user/process-question}"
                 >
@@ -80,35 +80,6 @@
           </div>
         </div>
       </div>
-
-      <script
-        src="http://js.nicedit.com/nicEdit-latest.js"
-        type="text/javascript"
-      ></script>
-      <script src="src/nicSelect/nicSelect.js" type="text/javascript"></script>
-
-      <script type="text/javascript">
-        bkLib.onDomLoaded(function () {
-          new nicEditor({
-            buttonList: [
-              "ul",
-              "ol",
-              "bold",
-              "italic",
-              "underline",
-              "strikeThrough",
-              "subscript",
-              "superscript",
-              "html",
-              "quoteblock",
-              "left",
-              "center",
-              "right",
-            ],
-          }).panelInstance("content");
-        });
-      </script>
-
       <script>
         let today = new Date();
         let formatted_date =
