--- a/src/main/resources/templates/normal/fragments/questionfragment.html
+++ b/src/main/resources/templates/normal/fragments/questionfragment.html
@@ -27,11 +27,11 @@
                   th:action="@{/user/process-question}"
                 >
                   <div class="form-group">
-                    <label for="question">Question</label>
+                    <label for="title">Question</label>
                     <input
                       type="text"
-                      name="question"
-                      id="question"
+                      name="title"
+                      id="title"
                       class="form-control"
                       placeholder="Question"
                       aria-describedby="helpId"
