--- a/src/main/resources/templates/normal/feed.html
+++ b/src/main/resources/templates/normal/feed.html
@@ -26,10 +26,7 @@
           data-target="#modelId"
           style="margin-left: 16px"
         >
-          <!-- <a th:href="@{/user/add-blog}"> -->
-          <!-- <button type="button" class="btn btn-dark"> -->
           WRITE BLOG
-          <!-- </button> -->
         </button>
         <a th:href="@{'/logout'}"
           ><button type="button" class="btn btn-dark">LOGOUT</button>
@@ -38,6 +35,7 @@
       <div>
         <div th:replace="normal/fragments/formfragment :: modal"></div>
       </div>
+
       <div class="feed" style="text-align: -webkit-center">
         <div
           style="
@@ -54,12 +52,19 @@
           <!-- <div th:if="${blogs.empty}">
             <span>No Blogs Available</span>
           </div> -->
+
           <div
             class="alert alert-warning alert-dismissible fade show"
             role="alert"
             th:if="${session.message}"
             th:classappend="${session.message.type}"
-            style="padding: 50px; background-color: black; width: fit-content"
+            style="
+              padding: 20px;
+              background-color: #334;
+              border-radius: 17px;
+              text-align: center;
+              width: auto;
+            "
           >
             <button
               type="button"
