--- a/src/main/resources/templates/normal/qna.html
+++ b/src/main/resources/templates/normal/qna.html
@@ -89,7 +89,7 @@
             >
               <div
                 style="font-size: 25px; font-weight: 800"
-                th:text="${question.question}"
+                th:text="${question.title}"
               ></div>
               <p>
                 <span
