--- a/src/main/resources/templates/normal/userblogs.html
+++ b/src/main/resources/templates/normal/userblogs.html
@@ -13,9 +13,15 @@
   <body>
     <section>
       <div class="sidenav">
-        <a th:href="@{/user/add-blog}">
-          <button type="button" class="btn btn-dark">WRITE BLOG</button>
-        </a>
+        <button
+          type="button"
+          class="btn btn-dark"
+          data-toggle="modal"
+          data-target="#modelId"
+          style="margin-left: 16px"
+        >
+          WRITE BLOG
+        </button>
 
         <a th:href="@{/user/feed/0}"
           ><button type="button" class="btn btn-dark">HOME</button>
@@ -30,7 +36,9 @@
           ><button type="button" class="btn btn-dark">LOGOUT</button>
         </a>
       </div>
-
+      <div>
+        <div th:replace="normal/fragments/formfragment :: modal"></div>
+      </div>
       <div class="feed">
         <div
           style="
@@ -49,7 +57,13 @@
             role="alert"
             th:if="${session.message}"
             th:classappend="${session.message.type}"
-            style="padding: 50px; background-color: black; width: fit-content"
+            style="
+              padding: 20px;
+              background-color: #334;
+              border-radius: 17px;
+              text-align: center;
+              width: auto;
+            "
           >
             <button
               type="button"
