--- a/src/main/resources/templates/normal/answer.html
+++ b/src/main/resources/templates/normal/answer.html
@@ -68,7 +68,7 @@
           >
             <div
               style="font-size: 25px; font-weight: 800"
-              th:text="${question.question}"
+              th:text="${question.title}"
             ></div>
             <div>
               <span
