--- a/src/main/resources/templates/normal/feed.html
+++ b/src/main/resources/templates/normal/feed.html
@@ -131,6 +131,7 @@
                   height: fit-content;
                 "
                 class="btn btn-light likebutton"
+                th:onclick="|window.location.href='/user/like/${blog.blogId}'|"
               >
                 <svg width="24px" height="24px" viewBox="0 0 24 24">
                   <g
